--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "hono": "^4.6.13",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
